Try to fix overflow on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,6 @@ body {
   overflow-x: hidden;
 }
 
-html {
-  overflow-x: hidden;
-}
-
 .top {
   display: flex;
   align-items: center;
@@ -226,6 +222,7 @@ html {
     rgba(250, 250, 250, 1) 0%
   );
   background-image: url('../img/pattern.png');
+  overflow-x: hidden;
 }
 
 .show-list {
